--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,8 @@
-{ "plugins" : ["prettier-plugin-tailwindcss"]}
+{ "plugins" : ["prettier-plugin-tailwindcss"],
+  "printWidth": 80,
+  
+
+"trailingComma": "es5",
+  "tabWidth": 4,
+  "semi": false,
+  "singleQuote": true}
